--- a/sass/style.sass
+++ b/sass/style.sass
@@ -93,4 +93,78 @@ iframe
 
 .hidden-by-min-price 
   display: none
+
+.content
+  display: flex
+  align-items: center
+  justify-content: center
+  width: 100%
+  min-height: 50vh
+
+header nav
+  height: 51px
+  background: #212121
+  position: fixed
+  width: 100%
+  z-index: 2
+
+.hamburger
+  display: block
+  position: absolute
+  left: 11px
+  top: 30px
+  width: 25px
+  z-index: 3
+  height: 16px
+
+  span
+    display: block
+    background-color: #fff
+    margin-bottom: 2px
+    height: 2px
+    margin-right: 2px
+    margin-left: 2px
+    transition: .5s all
+
+  &.hamburger_active span:nth-child(1)
+    transform: rotate(-90deg)
+
+  &.hamburger_active span:nth-child(2)
+    transform: translateX(5px) rotate(-90deg) translateY(-2px)
+
+  &.hamburger_active span:nth-child(3)
+    transform: translateX(6px) rotate(-90deg)
+
+.menu
+  margin: 0
+  list-style: none
+  display: flex
+  align-items: center
+  gap: 20px
+  height: 60%
+  position: fixed
+  top: 0
+  left: -70%
+  flex-direction: column
+  justify-content: center
+  width: 400px
+  background-color: rgba(0,0,0,.8)
+  padding: 20px 15px
+
+  &_active
+    left: 0
+
+  .menu_item
+    a
+      font-style: normal
+      font-weight: 300
+      font-size: 15px
+      line-height: 15px
+      color: #fff
+      text-decoration: none
+
+    
+  
+
+
    
